# call-me-maybe

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
src/call_me_maybe/: __init__.py  main.py
src/call_me_maybe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/call_me_maybe/agent/: __init__.py  agent.py
src/call_me_maybe/agent/tools/: __init__.py  base.py  registry.py
src/call_me_maybe/audio/: __init__.py  capture.py  playback.py
src/call_me_maybe/config/: __init__.py  settings.py
src/call_me_maybe/models/: __init__.py  base.py  composite.py  factory.py  local.py  remote.py
tests/: __init__.py  test_agent.py  test_audio.py  test_config.py  test_models.py
