[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "call-me-maybe"
version = "0.1.0"
description = "A voice-based AI agent supporting local (Apple Silicon / MLX) and remote (OpenAI-compatible) inference"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "typer>=0.12",
    "mcp>=1.2",
    "mlx>=0.30.4; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.31.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
local = [
    "mlx>=0.30.4",
    "mlx-lm>=0.31.1",
    "mlx-audio>=0.4.2",
    "tiktoken>=0.9.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]

[project.scripts]
call-me-maybe = "call_me_maybe.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/call_me_maybe"]
omit = ["tests/*"]
